# apf-process-files-fastapi

./: README.md  controllers.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  routes.py  utils.py
assets/: database.sqlite
